pasuspender --help incomplete
Summary
ArchLinux troubleshooting suggests running /usr/bin/pasuspender /bin/true
. If you run pasuspender --help
you get no indication what this executable argument is for. The pasuspender(1) man page explains it.
environment
Linux fedlaptop 5.1.16-300.fc30.x86_64 #1 SMP Wed Jul 3 15:06:51 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
pasuspender --version
pasuspender 12.2-rebootstrapped
Compiled with libpulse 12.2.0
Linked with libpulse 12.2.0
Steps to reproduce
$ pasuspender --help
What is the current bug behavior?
pasuspender [options] ...
-h, --help Show this help
--version Show version
-s, --server=SERVER The name of the server to connect to
This doesn't tell you how to run the command.
What is the expected correct behavior?
From the man page, something like
pasuspender [options] -- PROGRAM [ARGUMENTS ...]
Temporarily suspend PulseAudio while PROGRAM runs.
-h, --help Show this help
--version Show version
-s, --server=SERVER The name of the server to connect to
Seems an easy fix to the utility's help()
function, I'll see how hard it is to submit a patch.