pasuspender: explain program argument in help

Fixes: https://gitlab.freedesktop.org/pulseaudio/pulseaudio/issues/706